fix: Prevent post content from overflowing the post container

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -112,25 +112,13 @@ body {
 /* Post */
 
 .post {
-  // display: none;
-
-  position: absolute;
-  top: 0;
-  left: 0;
+  display: none;
   width: 100%;
-  opacity: 0;
-  z-index: 0;
-  transition: opacity 0.5s ease-in-out;
-  pointer-events: none;
   padding: 10px;
-
   overflow: hidden;
 
   &.active {
-    // display: block;
-    opacity: 1;
-    z-index: 10;
-    pointer-events: auto;
+    display: block;
   }
 }
 
@@ -143,14 +131,4 @@ body {
   p {
     margin: 0 10px 0 0;
   }
-}
-
-.post-content {
-  max-height: 120px;
-  overflow: hidden;
-  transition: max-height 0.5s ease-in-out;
-}
-
-.post:hover .post-content {
-  max-height: 245px;
 }
